# diana-filewatcher-qt5

./: README.md  configure.ac
src/: CoConsole.h  CoFileWatcher.h  Makefile.am  main.cc
